--- a/west.yml
+++ b/west.yml
@@ -64,7 +64,7 @@ manifest:
     - name: zephyr
       remote: sween
       repo-path: nrfconnect-sdk-zephyr
-      revision: sween-v3.5.99-ncs1-2
+      revision: sween-v3.5.99-ncs1-branch
       import:
         # In addition to the zephyr repository itself, NCS also
         # imports the contents of zephyr/west.yml at the above
